[taotao-cloud-project-1822] build[ taotao-cloud-docker-image taotao-cloud-sys  ]